--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,8 +22,8 @@ const { title } = Astro.props;
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		
 		<!-- Preload critical resources -->
-		<link rel="preconnect" href={`${Astro.url.protocol}//${Astro.url.hostname}:3000`}>
-		<link rel="dns-prefetch" href={`${Astro.url.protocol}//${Astro.url.hostname}:3000`}>
+		<link rel="preconnect" href={`${Astro.url.protocol}//${Astro.url.hostname}`}>
+		<link rel="dns-prefetch" href={`${Astro.url.protocol}//${Astro.url.hostname}`}>
 		
 		<!-- Preload fonts -->
 		<link rel="preload" href="https://fonts.gstatic.com" as="font" crossorigin>
