--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,8 @@ const { title } = Astro.props;
 		<meta name="description" content="Server Monitor Dashboard">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="shortcut icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="theme-color" content="#3B82F6" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		
