--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -3,6 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import AdminDashboard from '../components/AdminDashboard';
 ---
 
-<Layout title="Monitoring Management">
+<Layout title="A-Server Management">
   <AdminDashboard client:load />
 </Layout> 
