--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Dashboard from '../components/Dashboard';
 ---
 
-<Layout title="Server Monitoring System">
+<Layout title="A-Server">
 	<div class="container mx-auto px-4 py-8">
 		<Dashboard client:visible />
 	</div>
